[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.protocol-owned-liquidity]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
