[package]
authors = ["Nexus Labs"]
description = "A Vesting contract for Nexus Protocol"
documentation = "todo"
edition = "2018"
homepage = "todo"
license = "Apache-2.0"
name = "nexus-vesting"
repository = "https://github.com/Nexus-Protocol/services-contracts"
version = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "0.16.1", features = ["iterator"]}
cosmwasm-storage = {version = "0.16.1", features = ["iterator"]}
cw20 = {version = "0.8.1"}
schemars = "0.8.1"
serde = {version = "1.0.126", default-features = false, features = ["derive"]}
services = {path = "../../packages/services", default-features = false, version = "1.0.0"}

[dev-dependencies]
cosmwasm-schema = {version = "0.16", default-features = false}
